# rust_fullstack_template

./: .env  .gitignore  README.md  docker-compose.yaml  start.sh
backend/: Cargo.toml  Dockerfile  app.py  docker-entrypoint.sh  format.sh  requirements.txt
backend/api/cache/: book_cache.py  cache.py
backend/api/database/: book.py  db.py
backend/api/repository/: __init__.py  book_repository.py
backend/api/route/: __init__.py  book_controller.py  health_check_controller.py
backend/api/schema/: __init__.py  book_response.py
backend/api/service/: __init__.py  book_service.py
backend/migrations/: 20250317065633_create_book_table.sql
backend/src/: main.rs
backend/src/controller/: book_controller.rs  mod.rs
backend/src/model/: book.rs  mod.rs
backend/src/repository/: book_repository.rs  mod.rs
backend/src/service/: book_service.rs  mod.rs
backend/tracing/: log.py
db/: init.sql
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.js  index.js
frontend/src/api-client/: BookClient.js  BookClientMock.js
frontend/src/components/: Book.js
