[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"          # Actix-web framework
tokio = { version = "1", features = ["full"] }  # Async runtime (Actix-web needs an async runtime)
serde = { version = "1.0", features = ["derive"] }  # Serde for serialization (optional)
serde_json = "1.0"         # JSON support for Serde (optional, often used in web apps)
actix-rt = "2.5"           # Actix runtime for async tasks (optional, but needed for Actix async system)
env_logger = "0.9"         # Logging support (optional, useful for logging)
diesel = { version = "2.0", features = ["postgres"] }  # Diesel ORM for Postgres (optional)
dotenv = "0.15"            # For loading environment variables from a `.env` file (optional)

[[bin]]
name = "app"  # Custom binary name
path = "src/main.rs"  # Optional, the path to the main source file (default is src/main.rs)